feat: Add sendEmails function to send emails to users

--- a/src/css/App.css
+++ b/src/css/App.css
@@ -55,3 +55,12 @@
   margin: 2vh auto !important;
   margin-bottom: 0;
 }
+
+#to-textfield {
+  text-align: left !important;
+  direction: ltr !important;
+}
+
+#emails-input-stack {
+  
+}
