chore: Update PaperContent.tsx and MultiEmail.tsx components

--- a/src/css/App.css
+++ b/src/css/App.css
@@ -54,13 +54,10 @@
 .rich-text-editor {
   margin: 2vh auto !important;
   margin-bottom: 0;
+  max-width: 93%;
 }
 
 #to-textfield {
   text-align: left !important;
   direction: ltr !important;
-}
-
-#emails-input-stack {
-  
 }
