--- a/src/css/App.css
+++ b/src/css/App.css
@@ -86,9 +86,10 @@
 .editor-container_classic-editor .editor-container__editor {
 	/* margin: 2vh auto !important; */
   margin-bottom: 0;
+  margin-top: 20px;
   max-width: 97%;
   max-height: 40vh;
-  overflow-y: scroll;
+  overflow-y: auto;
 }
 
 .ck-powered-by-balloon {
