--- a/src/css/App.css
+++ b/src/css/App.css
@@ -42,24 +42,10 @@
 }
 
 
-/* .content {
-  display: flex !important;
-} */
-
-.css-e4qio2-RichTextField-content-RichTextContent-root-RichTextContent-editable .ProseMirror[contenteditable="true"] {
-  max-height: 40vh;
-  overflow-y: scroll;
-}
-
 .rich-text-editor {
   margin: 2vh auto !important;
   margin-bottom: 0;
   max-width: 93%;
-}
-
-#to-textfield {
-  text-align: left !important;
-  direction: ltr !important;
 }
 
 @import url('https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,400;0,700;1,400;1,700&display=swap');
@@ -75,20 +61,23 @@
 	width: fit-content;
 	margin-left: auto;
 	margin-right: auto;
+  width: 100%;
+  border-radius: 11px;
 }
 
 .ck-content {
-	font-family: 'Lato';
+	font-family: 'Rubik', sans-serif;
 	line-height: 1.6;
 	word-break: break-word;
+  min-height: 30vh;
+  max-width: 100%;
 }
 
 .editor-container_classic-editor .editor-container__editor {
-	/* margin: 2vh auto !important; */
   margin-bottom: 0;
   margin-top: 20px;
-  max-width: 97%;
-  max-height: 40vh;
+  max-width: 100%;
+  max-height: 39vh;
   overflow-y: auto;
 }
 
