--- a/src/css/index.css
+++ b/src/css/index.css
@@ -1,6 +1,6 @@
 @font-face {
     font-family: "Rubik";
-    src: url("../public/fonts/Rubik-Regular.ttf") format("truetype");
+    src: url("/fonts/Rubik-Regular.ttf") format("truetype");
     font-weight: 400;
     font-style: normal;
 }
